--- a/assets/css/porte-folio.scss
+++ b/assets/css/porte-folio.scss
@@ -5,7 +5,7 @@ $C3a: rgba(0, 0, 12, 0.376);
 @import url('https://fonts.googleapis.com/css?family=Oswald');
 main {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 45% 45%;
     grid-gap: 1%;
     section {
         background: $C3;
@@ -20,6 +20,7 @@ main {
             text-align: center;
             color: $C1;
             border-radius: 180px;
+            overflow-wrap: break-word;
             a {
                 color: $C2;
                 text-decoration: none;
